# flask_orm_api_example_project

./: .gitignore  Makefile  README.md  app.py  pyproject.toml
apps/core/: models.py
apps/shared/: models.py  utils.py
templates/: base.html  home.html
