[tool.poetry]
name = "FlaskORM"
version = "1.0.0"
description = ""
authors = ["Maciej Januszewski"]
readme = "README.md"
homepage = ""

[tool.poetry.dependencies]
python = "^3.7, <3.9"
Flask = "^1.1.2"
Flask-SQLAlchemy = "^2.5.1"
flask-marshmallow = "^0.14.0"
Flask-RESTful = "^0.3.8"
python-dotenv = "^0.17.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[tool.black]
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | venv
    | _build
    | build
    | dist
    | static
    | migrations
  )/
    # The following are specific to Black, you probably don't want those.
    | blib2to3
    | tests/data
  # also separately exclude a file named foo.py in the root of the project
  # | foo.py
)
'''